updating heckman.bib and do file for NPV of DWL

--- a/heckman.bib
+++ b/heckman.bib
@@ -29960,16 +29960,6 @@
   Timestamp                = {2016.03.01}
 }
 
-@Unpublished{Garcia_etal_2016_Comp_CBA_Unpublished,
-  Title                    = {The Life-Cycle Benefits of an Influential Early Childhood Program},
-  Author                   = {Garc\'{i}a, Jorge Luis and Heckman, James J. and Hojman, Andr\'{e}s and Leaf, Duncan Ermini and Prados, Mar\'{i}a Jos\'{e}},
-  Note                     = {University of Chicago, Department of Economics},
-  Year                     = {2016},
-
-  Owner                    = {Stallings_LLC},
-  Timestamp                = {2016.09.01}
-}
-
 @Unpublished{Garcia_et_al_2016_ABC_unpublished,
   Title                    = {The Internal Rate of Return and the Benefit-Cost Ratio of the {C}arolina {A}becedarian {P}roject},
   Author                   = {Garc\'{i}a, Jorge Luis and Heckman, James J. and Hojman, Andr\'{e}s and Leaf, Duncan Ermini and Prados, Mar\'{i}a Jos\'{e} and Shea, Joshua and Torcasso, Jake C.},
@@ -29989,6 +29979,16 @@
 
   Owner                    = {Jessica Dyer},
   Timestamp                = {2016.06.02}
+}
+
+@Unpublished{Garcia_etal_2016_Comp_CBA_Unpublished,
+  Title                    = {The Life-Cycle Benefits of an Influential Early Childhood Program},
+  Author                   = {Garc\'{i}a, Jorge Luis and Heckman, James J. and Leaf, Duncan Ermini and Prados, Mar\'{i}a Jos\'{e}},
+  Note                     = {University of Chicago, Department of Economics},
+  Year                     = {2016},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.09.01}
 }
 
 @Unpublished{Garcia_et_al_2014_Time_Allocation_Unpublished,
@@ -31984,6 +31984,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2014.06.19}
 }
 
+@Article{Gorman_1980_RESTUD,
+  Title                    = {A possible procedure for analysing quality differentials in the egg market},
+  Author                   = {Gorman, W. M.},
+  Journal                  = {The Review of Economic Studies},
+  Year                     = {1980},
+  Pages                    = {843-856},
+
+  Owner                    = {Alexandra},
+  Timestamp                = {2014.07.22}
+}
+
 @Article{Gorman_1980_REStud,
   Title                    = {A Possible Procedure for Analysing Quality Differentials in the Egg Market},
   Author                   = {W. M. Gorman},
@@ -31996,17 +32007,6 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {47},
 
   Owner                    = {Lynn}
-}
-
-@Article{Gorman_1980_RESTUD,
-  Title                    = {A possible procedure for analysing quality differentials in the egg market},
-  Author                   = {Gorman, W. M.},
-  Journal                  = {The Review of Economic Studies},
-  Year                     = {1980},
-  Pages                    = {843-856},
-
-  Owner                    = {Alexandra},
-  Timestamp                = {2014.07.22}
 }
 
 @Article{Gorman_1965_RES,
