addind durbin w to endog plots

--- a/output/abccare_endog_si30y_inc_trans_pub_spooled.tex
+++ b/output/abccare_endog_si30y_inc_trans_pub_spooled.tex
@@ -1,15 +1,18 @@
-\begin{tabular}{lcccccccc} \toprule
- & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
- & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
-R & -1678.706 &     0.990 &  -952.304 &     0.855 & -1043.970 &     0.915 & -1061.716 &     0.840 \\  
-Mother's Education &  -228.909 &     0.790 &  -373.481 &     0.850 &   -88.084 &     0.575 &  -164.299 &     0.620 \\  
-PIAT (5-7) &         . &         . &         . &         . &   -25.165 &     0.765 &   -63.598 &     0.765 \\  
-Education (30) &         . &         . &         . &         . &  -340.259 &     0.945 &  -335.886 &     0.875 \\  
-Labor Income (21) &         . &         . &         . &         . &    -0.093 &     0.995 &    -0.089 &     0.985 \\  
-Cognitive &         . &         . &  -588.565 &     0.900 &         . &         . &   221.459 &     0.410 \\  
-Non Cognitive &         . &         . &   441.243 &     0.220 &         . &         . &   163.844 &     0.365 \\  
-Constant &  5171.770 &     0.055 &  6532.795 &     0.050 & 11573.139 &     0.030 & 16155.971 &     0.045 \\  \\ \midrule
-F-stat &     3.017 &         . &     2.271 &         . &     3.104 &         . &     2.255 &         . \\  
-R2 &     0.051 &         . &     0.094 &         . &     0.150 &         . &     0.178 &         . \\  
-Observations &   133.000 &         . &   101.000 &         . &   135.000 &         . &   133.000 &         . \\  
-\bottomrule \end{tabular}
+% matrix: allsi30y_inc_trans_pub_spooled file: abccare_endog_si30y_inc_trans_pub_spooled.tex  31 Oct 2016 18:20:03
+\begin{table}[htbp]
+\begin{tabular}{lcccccccc} \hline \hline
+ & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
+Mother'sEducation &      -125.26 &         0.50 &      -261.74 &         0.83 &       -89.18 &         0.50 &      -230.52 &         0.83 \\  
+PIAT(5-7) &            . &            . &            . &            . &       -25.46 &         0.67 &       -20.74 &         0.50 \\  
+Education(30) &            . &            . &            . &            . &      -433.32 &         1.00 &      -451.03 &         1.00 \\  
+LaborIncome(21) &            . &            . &            . &            . &        -0.10 &         1.00 &        -0.08 &         1.00 \\  
+Cognitive &            . &            . &      -967.16 &         1.00 &            . &            . &      -327.18 &         0.67 \\  
+NonCognitive &            . &            . &       705.94 &         0.00 &            . &            . &       383.71 &         0.33 \\  
+Constant &     3,093.46 &         0.17 &     4,674.71 &         0.00 &    12,344.28 &         0.00 &    13,373.42 &         0.00 \\  
+F-stat &         0.91 &            . &         2.94 &            . &         4.13 &            . &         2.23 &            . \\  
+R2 &         0.01 &            . &         0.08 &            . &         0.16 &            . &         0.17 &            . \\  
+Observations &       130.00 &            . &        96.00 &            . &       130.00 &            . &       133.00 &            . \\  
+DWH &            . &            . &         0.82 &            . &            . &            . &         0.76 &            . \\  
+pDWH &            . &            . &         0.44 &            . &            . &            . &         0.44 &            . \\  
+\hline \hline \end{tabular}
+\end{table}
