--- a/output/abccare_endog_si34y_bmi_smale.tex
+++ b/output/abccare_endog_si34y_bmi_smale.tex
@@ -1,15 +1,18 @@
-\begin{tabular}{lcccccccc} \toprule
- & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
- & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
-R &    -0.189 &     0.510 &     1.262 &     0.370 &    -0.397 &     0.545 &     1.150 &     0.400 \\  
-Mother's Education &    -0.513 &     0.805 &     0.448 &     0.380 &    -0.091 &     0.510 &     1.074 &     0.215 \\  
-PIAT (5-7) &         . &         . &         . &         . &     0.224 &     0.050 &     0.651 &     0.075 \\  
-Education (30) &         . &         . &         . &         . &     0.445 &     0.250 &     1.482 &     0.220 \\  
-Labor Income (21) &         . &         . &         . &         . &     0.000 &     0.165 &     0.000 &     0.100 \\  
-Cognitive &         . &         . &    -1.677 &     0.800 &         . &         . &    -4.854 &     0.920 \\  
-Non Cognitive &         . &         . &     0.119 &     0.475 &         . &         . &     0.563 &     0.380 \\  
-Constant &    36.443 &     0.000 &    26.285 &     0.030 &     3.330 &     0.455 &   -64.561 &     0.885 \\  \\ \mdirule
-F-stat &     1.835 &         . &     2.330 &         . &     5.387 &         . &    31.866 &         . \\  
-R2 &     0.076 &         . &     0.180 &         . &     0.230 &         . &     0.504 &         . \\  
-Observations &    37.000 &         . &    25.000 &         . &    35.000 &         . &    35.000 &         . \\  
-\bottomrule \end{tabular}
+% matrix: allsi34y_bmi_smale file: abccare_endog_si34y_bmi_smale.tex  31 Oct 2016 18:20:00
+\begin{table}[htbp]
+\begin{tabular}{lcccccccc} \hline \hline
+ & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
+Mother'sEducation &        -0.09 &         0.50 &         0.45 &         0.33 &         0.51 &         0.33 &         1.83 &         0.00 \\  
+PIAT(5-7) &            . &            . &            . &            . &         0.26 &         0.00 &         0.63 &         0.00 \\  
+Education(30) &            . &            . &            . &            . &         0.99 &         0.33 &         3.04 &         0.00 \\  
+LaborIncome(21) &            . &            . &            . &            . &         0.00 &         0.33 &         0.00 &         0.50 \\  
+Cognitive &            . &            . &        -0.83 &         1.00 &            . &            . &        -3.60 &         1.00 \\  
+NonCognitive &            . &            . &         1.02 &         0.50 &            . &            . &         0.29 &         0.50 \\  
+Constant &        31.40 &         0.00 &        26.58 &         0.00 &       -13.37 &         0.67 &       -87.18 &         1.00 \\  
+F-stat &         0.13 &            . &         0.94 &            . &         5.80 &            . &         4.13 &            . \\  
+R2 &         0.00 &            . &         0.06 &            . &         0.20 &            . &         0.30 &            . \\  
+Observations &        35.00 &            . &        24.00 &            . &        35.00 &            . &        35.00 &            . \\  
+DWH &            . &            . &         0.88 &            . &            . &            . &         1.01 &            . \\  
+pDWH &            . &            . &         0.42 &            . &            . &            . &         0.42 &            . \\  
+\hline \hline \end{tabular}
+\end{table}
