--- a/output/abccare_endog_si30y_inc_labor_smale.tex
+++ b/output/abccare_endog_si30y_inc_labor_smale.tex
@@ -1,15 +1,18 @@
-\begin{tabular}{lcccccccc} \toprule
- & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
- & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
-R & 18169.158 &     0.075 & 21891.223 &     0.150 & 15649.704 &     0.115 & 18835.850 &     0.185 \\  
-Mother'sEducation &  5722.000 &     0.090 &  6064.495 &     0.260 &  4618.608 &     0.155 &  8200.867 &     0.160 \\  
-PIAT(5-7) &         . &         . &         . &         . &   459.787 &     0.180 &  1828.085 &     0.110 \\  
-Education(30) &         . &         . &         . &         . & 15803.528 &     0.000 & 22139.904 &     0.015 \\  
-LaborIncome(21) &         . &         . &         . &         . &     0.107 &     0.410 &     0.193 &     0.365 \\  
-Cognitive &         . &         . &  -896.956 &     0.525 &         . &         . & -1.37e+04 &     0.815 \\  
-NonCognitive &         . &         . & 10273.761 &     0.105 &         . &         . &  7533.493 &     0.175 \\  
-Constant & -3.16e+04 &     0.780 & -3.48e+04 &     0.630 & -2.72e+05 &     0.985 & -5.26e+05 &     0.965 \\  
-F-stat &     2.327 &         . &     1.963 &         . &     4.833 &         . &     7.182 &         . \\  \midrule 
-R2 &     0.068 &         . &     0.128 &         . &     0.343 &         . &     0.465 &         . \\  
-Observations &    66.000 &         . &    48.000 &         . &    65.000 &         . &    63.000 &         . \\  
-\bottomrule \end{tabular}
+% matrix: allsi30y_inc_labor_smale file: abccare_endog_si30y_inc_labor_smale.tex  31 Oct 2016 18:19:58
+\begin{table}[htbp]
+\begin{tabular}{lcccccccc} \hline \hline
+ & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
+Mother'sEducation &     5,177.85 &         0.00 &     3,690.02 &         0.00 &     2,696.73 &         0.33 &     3,408.50 &         0.33 \\  
+PIAT(5-7) &            . &            . &            . &            . &       532.30 &         0.00 &       873.70 &         0.17 \\  
+Education(30) &            . &            . &            . &            . &    11,879.92 &         0.00 &    15,667.43 &         0.00 \\  
+LaborIncome(21) &            . &            . &            . &            . &         0.31 &         0.00 &         0.64 &         0.00 \\  
+Cognitive &            . &            . &    -2,607.35 &         0.67 &            . &            . &    -2,959.26 &         0.67 \\  
+NonCognitive &            . &            . &    11,641.28 &         0.00 &            . &            . &    11,971.84 &         0.00 \\  
+Constant &   -17,512.40 &         0.67 &      -502.40 &         0.50 &  -207,287.45 &         1.00 &  -299,834.47 &         1.00 \\  
+F-stat &         5.63 &            . &         1.47 &            . &         6.31 &            . &         6.19 &            . \\  
+R2 &         0.06 &            . &         0.08 &            . &         0.30 &            . &         0.40 &            . \\  
+Observations &        71.00 &            . &        52.00 &            . &        70.00 &            . &        70.00 &            . \\  
+DWH &            . &            . &         1.58 &            . &            . &            . &         0.74 &            . \\  
+pDWH &            . &            . &         0.37 &            . &            . &            . &         0.37 &            . \\  
+\hline \hline \end{tabular}
+\end{table}
