--- a/output/abccare_endog_si30y_inc_labor_spooled.tex
+++ b/output/abccare_endog_si30y_inc_labor_spooled.tex
@@ -1,15 +1,18 @@
-\begin{tabular}{lcccccccc} \toprule
- & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
- & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
-R & 10576.303 &     0.065 & 11,165.829 &     0.125 &   283.356 &     0.490 &  1,836.270 &     0.410 \\  
-Mother'sEducation &  1,851.130 &     0.205 &  1,131.843 &     0.375 &   496.581 &     0.430 &  1,052.668 &     0.365 \\  
-PIAT(5-7) &         . &         . &         . &         . &   -81.009 &     0.595 &  -320.784 &     0.705 \\  
-Education(30) &         . &         . &         . &         . &  8097.138 &     0.000 &  9141.309 &     0.000 \\  
-LaborIncome(21) &         . &         . &         . &         . &     0.130 &     0.330 &     0.192 &     0.325 \\  
-Cognitive &         . &         . &  2,308.860 &     0.305 &         . &         . &   785.891 &     0.465 \\  
-NonCognitive &         . &         . &  2,665.092 &     0.190 &         . &         . &  6,876.181 &     0.065 \\  
-Constant &  7,067.552 &     0.405 & 14,188.359 &     0.340 & -73,300.00 &     0.965 & -70,500.00 &     0.920 \\  \midrule
-F-stat &     1.965 &         . &     1.522 &         . &     5.746 &         . &     4.742 &         . \\  
-R2 &     0.031 &         . &     0.056 &         . &     0.210 &         . &     0.251 &         . \\  
-Observations &   132.000 &         . &   101.000 &         . &   130.000 &         . &   133.000 &         . \\  
-\bottomrule  \end{tabular}
+% matrix: allsi30y_inc_labor_spooled file: abccare_endog_si30y_inc_labor_spooled.tex  31 Oct 2016 18:20:03
+\begin{table}[htbp]
+\begin{tabular}{lcccccccc} \hline \hline
+ & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
+Mother'sEducation &     2,108.83 &         0.00 &       253.08 &         0.50 &       257.59 &         0.50 &       200.23 &         0.50 \\  
+PIAT(5-7) &            . &            . &            . &            . &       108.50 &         0.17 &      -229.00 &         0.83 \\  
+Education(30) &            . &            . &            . &            . &     7,412.12 &         0.00 &     8,251.43 &         0.00 \\  
+LaborIncome(21) &            . &            . &            . &            . &        -0.06 &         0.50 &        -0.10 &         0.67 \\  
+Cognitive &            . &            . &     4,384.89 &         0.17 &            . &            . &     2,727.21 &         0.17 \\  
+NonCognitive &            . &            . &      -128.13 &         0.50 &            . &            . &     4,279.05 &         0.00 \\  
+Constant &     7,868.50 &         0.33 &    26,066.59 &         0.17 &   -80,521.59 &         1.00 &   -58,216.50 &         1.00 \\  
+F-stat &         1.40 &            . &         1.39 &            . &         7.34 &            . &         9.36 &            . \\  
+R2 &         0.01 &            . &         0.03 &            . &         0.14 &            . &         0.16 &            . \\  
+Observations &       134.00 &            . &       105.00 &            . &       135.00 &            . &       133.00 &            . \\  
+DWH &            . &            . &         1.22 &            . &            . &            . &         1.10 &            . \\  
+pDWH &            . &            . &         0.54 &            . &            . &            . &         0.54 &            . \\  
+\hline \hline \end{tabular}
+\end{table}
