--- a/output/abccare_endog_si30y_inc_trans_pub_sfemale.tex
+++ b/output/abccare_endog_si30y_inc_trans_pub_sfemale.tex
@@ -1,15 +1,18 @@
-\begin{tabular}{lcccccccc} \toprule
- & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
- & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
-R & -2,282.845 &     0.960 & -1,506.401 &     0.790 & -1,265.212 &     0.780 & -1,586.668 &     0.775 \\  
-Mother's Education &  -439.357 &     0.800 &  -449.456 &     0.740 &  -191.427 &     0.645 &   -35.434 &     0.530 \\  
-PIAT (5-7) &         . &         . &         . &         . &   -84.774 &     0.885 &  -198.713 &     0.885 \\  
-Education (30) &         . &         . &         . &         . &  -217.880 &     0.715 &   -91.087 &     0.585 \\  
-Labor Income (21) &         . &         . &         . &         . &    -0.131 &     0.945 &    -0.180 &     0.960 \\  
-Cognitive &         . &         . &  -858.586 &     0.915 &         . &         . &  1301.786 &     0.185 \\  
-Non Cognitive &         . &         . &   208.091 &     0.450 &         . &         . &  -579.182 &     0.680 \\  
-Constant &  8,904.146 &     0.065 &  8,851.117 &     0.080 & 18,591.076 &     0.025 & 27,403.846 &     0.065 \\  \midrule
-F-stat &     2.981 &         . &     2.324 &         . &     3.077 &         . &     2.826 &         . \\  
-R2 &     0.090 &         . &     0.143 &         . &     0.210 &         . &     0.265 &         . \\  
-Observations &    68.000 &         . &    53.000 &         . &    70.000 &         . &    70.000 &         . \\  
-\bottomrule \end{tabular}
+% matrix: allsi30y_inc_trans_pub_sfemale file: abccare_endog_si30y_inc_trans_pub_sfemale.tex  31 Oct 2016 18:20:01
+\begin{table}[htbp]
+\begin{tabular}{lcccccccc} \hline \hline
+ & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
+Mother'sEducation &      -380.42 &         0.83 &      -234.60 &         0.67 &      -209.44 &         0.50 &       121.64 &         0.33 \\  
+PIAT(5-7) &            . &            . &            . &            . &      -113.57 &         1.00 &      -208.21 &         1.00 \\  
+Education(30) &            . &            . &            . &            . &      -386.56 &         1.00 &      -430.77 &         1.00 \\  
+LaborIncome(21) &            . &            . &            . &            . &        -0.08 &         1.00 &        -0.12 &         1.00 \\  
+Cognitive &            . &            . &    -1,318.62 &         1.00 &            . &            . &     1,252.15 &         0.00 \\  
+NonCognitive &            . &            . &       313.18 &         0.33 &            . &            . &      -572.90 &         0.83 \\  
+Constant &     7,686.96 &         0.00 &     5,979.16 &         0.00 &    22,555.12 &         0.00 &    29,739.75 &         0.00 \\  
+F-stat &         1.27 &            . &         1.76 &            . &         2.72 &            . &         1.91 &            . \\  
+R2 &         0.02 &            . &         0.06 &            . &         0.12 &            . &         0.15 &            . \\  
+Observations &        73.00 &            . &        56.00 &            . &        75.00 &            . &        70.00 &            . \\  
+DWH &            . &            . &         1.74 &            . &            . &            . &         0.30 &            . \\  
+pDWH &            . &            . &         0.45 &            . &            . &            . &         0.45 &            . \\  
+\hline \hline \end{tabular}
+\end{table}
