--- a/output/abccare_endog_si30y_inc_trans_pub_smale.tex
+++ b/output/abccare_endog_si30y_inc_trans_pub_smale.tex
@@ -1,15 +1,18 @@
-\begin{tabular}{lcccccccc} \toprule
- & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
- & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
-R &  -502.449 &     0.790 &   143.318 &     0.435 &  -107.825 &     0.545 &   127.190 &     0.445 \\  
-Mother's Education &    99.292 &     0.255 &    25.500 &     0.475 &   115.258 &     0.360 &   135.300 &     0.390 \\  
-PIAT (5-7) &         . &         . &         . &         . &    -7.882 &     0.665 &     0.340 &     0.495 \\  
-Education (30) &         . &         . &         . &         . &  -170.789 &     0.855 &  -266.323 &     0.845 \\  
-Labor Income (21) &         . &         . &         . &         . &    -0.037 &     0.830 &    -0.038 &     0.830 \\  
-Cognitive &         . &         . &  -314.096 &     0.805 &         . &         . &  -313.968 &     0.655 \\  
-Non Cognitive &         . &         . &   171.856 &     0.400 &         . &         . &   221.053 &     0.375 \\  
-Constant &  -290.958 &     0.585 &   124.779 &     0.470 &  2813.461 &     0.220 &  3118.909 &     0.390 \\  \midrule
-F-stat &     0.829 &         . &     0.560 &         . &     0.524 &         . &     0.447 &         . \\  
-R2 &     0.037 &         . &     0.092 &         . &     0.115 &         . &     0.205 &         . \\  
-Observations &    66.000 &         . &    49.000 &         . &    65.000 &         . &    63.000 &         . \\  
-\bottomrule \end{tabular}
+% matrix: allsi30y_inc_trans_pub_smale file: abccare_endog_si30y_inc_trans_pub_smale.tex  31 Oct 2016 18:19:59
+\begin{table}[htbp]
+\begin{tabular}{lcccccccc} \hline \hline
+ & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
+Mother'sEducation &       125.83 &         0.17 &        16.55 &         0.50 &        58.32 &         0.33 &        66.92 &         0.50 \\  
+PIAT(5-7) &            . &            . &            . &            . &       -14.94 &         0.67 &        -7.78 &         0.50 \\  
+Education(30) &            . &            . &            . &            . &      -146.79 &         0.67 &      -232.97 &         0.67 \\  
+LaborIncome(21) &            . &            . &            . &            . &        -0.03 &         0.67 &        -0.04 &         0.67 \\  
+Cognitive &            . &            . &      -187.93 &         0.83 &            . &            . &      -315.06 &         0.83 \\  
+NonCognitive &            . &            . &        -9.21 &         0.50 &            . &            . &        -5.79 &         0.50 \\  
+Constant &      -793.19 &         0.50 &       240.39 &         0.50 &     3,625.31 &         0.33 &     4,224.04 &         0.50 \\  
+F-stat &         1.33 &            . &         0.60 &            . &         0.74 &            . &         0.58 &            . \\  
+R2 &         0.02 &            . &         0.06 &            . &         0.10 &            . &         0.20 &            . \\  
+Observations &        65.00 &            . &        45.00 &            . &        65.00 &            . &        63.00 &            . \\  
+DWH &            . &            . &         1.01 &            . &            . &            . &         0.56 &            . \\  
+pDWH &            . &            . &         0.36 &            . &            . &            . &         0.36 &            . \\  
+\hline \hline \end{tabular}
+\end{table}
