--- a/output/abccare_endog_si34y_bmi_sfemale.tex
+++ b/output/abccare_endog_si34y_bmi_sfemale.tex
@@ -1,15 +1,18 @@
-\begin{tabular}{lcccccccc} \toprule
- & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
- & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
-R &     3.675 &     0.110 &     7.167 &     0.035 &     4.623 &     0.090 &     6.526 &     0.020 \\  
-Mother's Education &    -0.148 &     0.580 &    -0.654 &     0.820 &    -0.492 &     0.715 &    -0.909 &     0.835 \\  
-PIAT (5-7) &         . &         . &         . &         . &    -0.119 &     0.775 &     0.040 &     0.440 \\  
-Education (30) &         . &         . &         . &         . &     0.238 &     0.445 &     0.269 &     0.435 \\  
-Labor Income (21) &         . &         . &         . &         . &     0.000 &     0.340 &     0.000 &     0.385 \\  
-Cognitive &         . &         . &    -2.171 &     0.925 &         . &         . &    -2.366 &     0.815 \\  
-Non Cognitive &         . &         . &     2.285 &     0.155 &         . &         . &     2.536 &     0.145 \\  
-Constant &    36.244 &     0.000 &    39.310 &     0.000 &    46.750 &     0.020 &    33.957 &     0.075 \\  \\ \midrule
-F-stat &     1.837 &         . &     3.151 &         . &     2.442 &         . &     3.206 &         . \\  
-R2 &     0.065 &         . &     0.206 &         . &     0.191 &         . &     0.285 &         . \\  
-Observations &    51.000 &         . &    41.000 &         . &    50.000 &         . &    49.000 &         . \\  
-\bottomrule \end{tabular}
+% matrix: allsi34y_bmi_sfemale file: abccare_endog_si34y_bmi_sfemale.tex  31 Oct 2016 18:20:02
+\begin{table}[htbp]
+\begin{tabular}{lcccccccc} \hline \hline
+ & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
+Mother'sEducation &         0.03 &         0.50 &        -0.90 &         1.00 &        -0.93 &         0.83 &        -1.45 &         1.00 \\  
+PIAT(5-7) &            . &            . &            . &            . &        -0.23 &         0.67 &         0.02 &         0.50 \\  
+Education(30) &            . &            . &            . &            . &         2.61 &         0.00 &         2.31 &         0.00 \\  
+LaborIncome(21) &            . &            . &            . &            . &         0.00 &         0.50 &        -0.00 &         0.50 \\  
+Cognitive &            . &            . &        -1.91 &         1.00 &            . &            . &        -2.97 &         1.00 \\  
+NonCognitive &            . &            . &         1.06 &         0.33 &            . &            . &         0.99 &         0.33 \\  
+Constant &        35.93 &         0.00 &        45.04 &         0.00 &        37.24 &         0.00 &        21.75 &         0.00 \\  
+F-stat &         1.09 &            . &         2.98 &            . &         1.96 &            . &         1.17 &            . \\  
+R2 &         0.02 &            . &         0.11 &            . &         0.19 &            . &         0.20 &            . \\  
+Observations &        45.00 &            . &        36.00 &            . &        45.00 &            . &        42.00 &            . \\  
+DWH &            . &            . &         0.62 &            . &            . &            . &         0.54 &            . \\  
+pDWH &            . &            . &         0.52 &            . &            . &            . &         0.52 &            . \\  
+\hline \hline \end{tabular}
+\end{table}
