--- a/output/abccare_endog_si34y_bmi_spooled.tex
+++ b/output/abccare_endog_si34y_bmi_spooled.tex
@@ -1,15 +1,18 @@
-\begin{tabular}{lcccccccc} \toprule
- & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
- & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
-R &     1.027 &     0.270 &     2.864 &     0.150 &     1.213 &     0.250 &     3.367 &     0.090 \\  
-Mother's Education &    -0.130 &     0.615 &    -0.116 &     0.560 &     0.003 &     0.500 &    -0.273 &     0.665 \\  
-PIAT (5-7) &         . &         . &         . &         . &     0.076 &     0.260 &     0.277 &     0.060 \\  
-Education (30) &         . &         . &         . &         . &    -0.116 &     0.575 &    -0.295 &     0.610 \\  
-Labor Income (21) &         . &         . &         . &         . &     0.000 &     0.290 &     0.000 &     0.095 \\  
-Cognitive &         . &         . &    -1.675 &     0.935 &         . &         . &    -3.431 &     0.960 \\  
-Non Cognitive &         . &         . &     1.615 &     0.195 &         . &         . &     2.392 &     0.100 \\  
-Constant &    34.913 &     0.000 &    33.909 &     0.000 &    26.682 &     0.070 &     9.604 &     0.330 \\  \\ \midrule
-F-stat &     1.366 &         . &     2.612 &         . &     1.663 &         . &     2.830 &         . \\  
-R2 &     0.027 &         . &     0.110 &         . &     0.090 &         . &     0.209 &         . \\  
-Observations &    87.000 &         . &    66.000 &         . &    85.000 &         . &    84.000 &         . \\  
-\bottomrule \end{tabular}
+% matrix: allsi34y_bmi_spooled file: abccare_endog_si34y_bmi_spooled.tex  31 Oct 2016 18:20:04
+\begin{table}[htbp]
+\begin{tabular}{lcccccccc} \hline \hline
+ & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
+Mother'sEducation &        -0.06 &         0.67 &        -0.05 &         0.50 &        -0.19 &         0.67 &        -0.32 &         0.67 \\  
+PIAT(5-7) &            . &            . &            . &            . &         0.03 &         0.33 &         0.28 &         0.00 \\  
+Education(30) &            . &            . &            . &            . &         0.19 &         0.33 &        -0.39 &         0.83 \\  
+LaborIncome(21) &            . &            . &            . &            . &         0.00 &         0.00 &         0.00 &         0.00 \\  
+Cognitive &            . &            . &        -1.14 &         1.00 &            . &            . &        -3.03 &         1.00 \\  
+NonCognitive &            . &            . &         1.16 &         0.17 &            . &            . &         2.13 &         0.00 \\  
+Constant &        34.55 &         0.00 &        34.74 &         0.00 &        29.83 &         0.00 &        12.09 &         0.00 \\  
+F-stat &         1.64 &            . &         2.78 &            . &         1.02 &            . &         2.48 &            . \\  
+R2 &         0.02 &            . &         0.07 &            . &         0.05 &            . &         0.17 &            . \\  
+Observations &        88.00 &            . &        68.00 &            . &        90.00 &            . &        91.00 &            . \\  
+DWH &            . &            . &         1.89 &            . &            . &            . &         2.38 &            . \\  
+pDWH &            . &            . &         0.42 &            . &            . &            . &         0.42 &            . \\  
+\hline \hline \end{tabular}
+\end{table}
