modify all results

--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -23,7 +23,7 @@
 \begin{titlepage}
 \newgeometry{top=.8in, bottom=.8in, left=.8in, right=.8in}
 
-\title{\Large \textbf{The Life-cycle Benefits of an Influential Early Childhood Program}\thanks{This research was supported in part by the American Bar Foundation; the Pritzker Children's Initiative, the Buffett Early Childhood Fund; National Institutes of Health grants NICHD R37HD065072, NICHD R01HD54702, NIA R24AG048081, and P30AG024968; an anonymous funder; Successful Pathways from School to Work, an initiative of the University of Chicago's Committee on Education funded by the Hymen Milgrom Supporting Organization; and the Human Capital and Economic Opportunity Global Working Group, an initiative of the Center for the Economics of Human Development, affiliated with the Becker Friedman Institute for Research in Economics, and funded by the Institute for New Economic Thinking. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. The authors wish to thank Frances Campbell, Craig and Sharon Ramey, Margaret Burchinal, Carrie Bynum, and the staff of the Frank Porter Graham Child Development Institute at the University of North Carolina Chapel Hill for the use of data and source materials from the Carolina Abecedarian Project and the Carolina Approach to Responsive Education. We also thank the researchers of the HighScope Educational Research Foundation's Perry Preschool Study, especially Lawrence Schweinhart and Cheryl Polk, for access to study data and source materials. Years of partnership and collaboration with these project teams have made this work possible. Collaboration with Andr\'{e}s Hojman, Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, Joshua Shea, Jake Torcasso, and Anna Ziff on related work has strengthened the analysis in this paper. Collaboration with Bryan Tysinger of the Leonard D. Schaeffer Center for Health Policy and Economics at the University of Southern California on adapting the Future America Model is gratefully acknowledged. For helpful comments on various versions of the paper, we thank St\'{e}phane Bonhomme, Fl\'{a}vio Cunha, Steven Durlauf, Dana Goldman, Sidharth Moktan, Azeem Shaikh, Matthew Tauzer, and Ed Vytlacil. We also benefited from helpful comments received at a Russell Sage Foundation seminar in September, 2016. For information on the implementation of the Carolina Abecedarian Project and the Carolina Approach to Responsive Education and assistance in data acquisition, we thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The set of codes to replicate the computations in this paper are posted in a repository. Interested parties can request to download all the files except for those of the Future America Model, due to private interests. The address of the repository is \url{https://github.com/jorgelgarcia/abccare-cba}. Data agreements do not allow us to post some of the data files that we use. Interested parties can contact any of the authors to be given a temporary license to access the data and replicate the results. The Web Appendix for this paper is posted on \url{http://cehd.uchicago.edu/ABC_CARE}.}}
+\title{\Large \textbf{The Life-cycle Benefits \\ of an Influential Early Childhood Program}\thanks{This research was supported in part by the American Bar Foundation; the Pritzker Children's Initiative, the Buffett Early Childhood Fund; National Institutes of Health grants NICHD R37HD065072, NICHD R01HD54702, NIA R24AG048081, and P30AG024968; an anonymous funder; Successful Pathways from School to Work, an initiative of the University of Chicago's Committee on Education funded by the Hymen Milgrom Supporting Organization; and the Human Capital and Economic Opportunity Global Working Group, an initiative of the Center for the Economics of Human Development, affiliated with the Becker Friedman Institute for Research in Economics, and funded by the Institute for New Economic Thinking. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. The authors wish to thank Frances Campbell, Craig and Sharon Ramey, Margaret Burchinal, Carrie Bynum, and the staff of the Frank Porter Graham Child Development Institute at the University of North Carolina Chapel Hill for the use of data and source materials from the Carolina Abecedarian Project and the Carolina Approach to Responsive Education. We also thank the researchers of the HighScope Educational Research Foundation's Perry Preschool Study, especially Lawrence Schweinhart and Cheryl Polk, for access to study data and source materials. Years of partnership and collaboration with these project teams have made this work possible. Collaboration with Andr\'{e}s Hojman, Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, Joshua Shea, Jake Torcasso, and Anna Ziff on related work has strengthened the analysis in this paper. Collaboration with Bryan Tysinger of the Leonard D. Schaeffer Center for Health Policy and Economics at the University of Southern California on adapting the Future America Model is gratefully acknowledged. For helpful comments on various versions of the paper, we thank St\'{e}phane Bonhomme, Fl\'{a}vio Cunha, Steven Durlauf, Dana Goldman, Sidharth Moktan, Azeem Shaikh, Matthew Tauzer, and Ed Vytlacil. We also benefited from helpful comments received at a Russell Sage Foundation seminar in September, 2016. For information on the implementation of the Carolina Abecedarian Project and the Carolina Approach to Responsive Education and assistance in data acquisition, we thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The set of codes to replicate the computations in this paper are posted in a repository. Interested parties can request to download all the files except for those of the Future America Model, due to private interests. The address of the repository is \url{https://github.com/jorgelgarcia/abccare-cba}. Data agreements do not allow us to post some of the data files that we use. Interested parties can contact any of the authors to be given a temporary license to access the data and replicate the results. The Web Appendix for this paper is posted on \url{http://cehd.uchicago.edu/ABC_CARE}.}}
 
 \author{
 Jorge Luis Garc\'{i}a\\
@@ -470,6 +470,7 @@ F_{\bm{Y}_e^d, \bm{X}_e^d | \bm{B}_e = \bm{b}} \left( \cdot, \cdot \right) = F_{
 \noindent for $\bm{Y}_e^d, \bm{X}^d_e | \bm{B}_e = \bm{b}$ and $\bm{Y}_n^d, \bm{X}^d_n | \bm{B}_n = \bm{b}$ contained the support of the experimental sample $supp\left(\bm{Y}^d_{e,a}, \bm{X}^d_{e,a}, \bm{B}\right)$.
 \end{condition}
 \doublespacing
+
 We are only interested in means for cost-benefit analysis. Thus, we can get by with Condition~\ref{cond:cond2}. It has testable implications, as we show below.
 
 \onehalfspacing
@@ -637,10 +638,6 @@ This section reports cost/benefit and rate of return analyses underlying Figure~
 
 The yearly cost of the program was \$18,514 per participant in 2014 USD. We improve on previous cost estimates using primary-source documents.\footnote{Our calculations are based on progress reports written by the principal investigators and related documentation recovered in the archives of the research center where the program was implemented. We display these sources in Appendix \ref{app:programcosts}. The main component is staff costs. Other costs arise from nutrition and services that the subjects receive when they were sick, diapers during the first 15 months of their lives, and transportation to the center. The control-group children also receive diapers during approximately 15 months, and iron-fortified formula. The costs are based on sources describing ABC treatment for $52$ children. We use the same costs estimates for CARE, for which there is less information available. The costs exclude any expenses related to research or policy analysis. A separate calculation by the implementers of the program indicates almost an identical amount (see Appendix~\ref{app:programcosts}).}
 
-\subsection{Benefit/Cost Estimates}
-
-Table~\ref{table:bcsens} presents our baseline estimates of benefit/cost ratios, Table~\ref{table:irrsens} presents the analogous internal rates of return. Pooling males and females, the results indicate that the program is socially efficient: the internal rate of return and the benefit/cost ratio are $12.6\%$ and $5.7$. \textit{The program generates a benefit of $5.7$ dollars for every dollar spent on it}. These estimates are statistically significant, even after accounting for sampling variation, serial correlation, and prediction error in the experimental and auxiliary samples and the tax costs of financing the program. These results are important because ABC/CARE was much more expensive than other early childhood education programs---the treatment involved more services over a longer time period \citep{Elango_Hojman_etal_2016_Early-Edu}.
-
 \newgeometry{top=.4in, bottom=.5in, left=.4in, right=.4in}
 \begin{sidewaystable}[!htpb]
 \begin{threeparttable}
@@ -672,6 +669,10 @@ Table~\ref{table:bcsens} presents our baseline estimates of benefit/cost ratios,
 \restoregeometry
 \doublespacing
 
+\subsection{Benefit/Cost Estimates}
+
+Table~\ref{table:bcsens} presents our baseline estimates of benefit/cost ratios, Table~\ref{table:irrsens} presents the analogous internal rates of return. Pooling males and females, the results indicate that the program is socially efficient: the internal rate of return and the benefit/cost ratio are $12.6\%$ and $5.7$. \textit{The program generates a benefit of $5.7$ dollars for every dollar spent on it}. These estimates are statistically significant, even after accounting for sampling variation, serial correlation, and prediction error in the experimental and auxiliary samples and the tax costs of financing the program. These results are important because ABC/CARE was much more expensive than other early childhood education programs---the treatment involved more services over a longer time period \citep{Elango_Hojman_etal_2016_Early-Edu}.
+
 We accompany these estimates with a set of sensitivity checks of statistical and economic interest. Our estimates are not driven by our methods for accounting for attrition and item non-response or by the conditioning variables we use when computing the net-present values. Although the internal rate of return remains relatively high when using participant outcome measures up to ages 21 or 30, the benefit/cost ratios indicate that accounting for benefits that go beyond age 30 is relevant. The return to each dollar is at most $3/1$ when considering benefits up to age 30 only (prediction span columns). The counterfactual comparisons made also matter. Males benefit the most from ABC/CARE relative to attending alternative childcare centers, while females benefit the most from ABC/CARE relative to staying at home. We explore this difference below.
 
 Our baseline estimates account for the deadweight caused by the government by taxing individuals to budget its expenditure for all government-related activities.\footnote{When the transaction between the government and an individual is a direct transfer, we consider .5 as a cost per each transacted dollar as we do not weight the final recipient of the transaction (e.g., transfer income). When the transaction is indirect, we classify it as government spending as a whole and consider its cost as 1.5 per each dollar spend (e.g. public education).} Our baseline estimate assumes that the marginal tax rate is $50\%$. Our estimates are robust to dropping it to $0\%$ or doubling it to $100\%$ (deadweight loss columns). Our baseline estimate of benefit/cost ratios is based on a discount rate of $3\%$. Not discounting roughly doubles our benefit/cost ratios, while they remain significant under a higher discount rate of $7\%$ (discount rate columns).
@@ -684,17 +685,11 @@ We do not perform sensitivity analysis to investigate cohort effects of health c
 
 We also examine the sensitivity of our estimates to (i) dropping the most costly crimes such as murders and rapes;\footnote{Two individuals in the treatment group committed a rape and one individual in the control group committed a murder.} and (ii) halving the costs of victimization and judiciary costs related to crime. The first sensitivity check is important because we would not want our calculation to be based on a few exceptional crimes. The second is important because victimization costs are somewhat subjective (see Appendix~\ref{appendix:crime}). Our benefit/cost analysis is robust to these adjustments, even when crime is a major component. Lastly, we examine the sensitivity with respect to our main health component: quality-adjusted life years. This is an important component because relatively healthier individuals survive longer and healthier, and treatment improves health conditions. It is important to note that this component largely accumulates later in life and therefore it is heavily discounted. Dropping the component or doubling the value of life does not have a major impact on our calculations.
 
-The estimates are robust when we conduct a drastic sensitivity analysis by removing components of the benefit/cost analysis entirely (Table~\ref{table:cba}).\footnote{In Appendix~\ref{appendix:sensitivity}, we present exercises that are not as drastic as removing the whole component, but instead removing fractions of it.} Even when completely removing the gain associated with crime for males, the program is socially efficient. Both the internal rate of return and the benefit/cost ratio are substantial. Parental income and crime are the components for which the internal rate of return and the benefit/cost ratio are the most sensitive. The reason for the sensitivity to parental income is that the amount is substantial and it is not heavily discounted because it accumulates during the first $21$ years of the children's life.\footnote{Depending on views about choice of individuals in labor markets, parental income should be excluded or included. If markets are neoclassical, the marginal value of foregone leisure is the wage and our our measure of parental income overstates the benefits of working. If nonemployment is involuntary, the full benefits should be counted.} Crime occurs later in life and its benefits are discounted accordingly. The amount due to crime savings is large so removing it diminishes both the internal rate of return and the benefit/cost ratio (but they remain statistically significant).
-
-\textit{Our sensitivity analyses indicate that no single category of outcomes drives the social efficiency of the program. It is the life-cycle benefits across multiple dimensions of human development.}
-
-In Appendix~\ref{appendix:bcaestimates} we use our analysis to examine the empirical foundations of recent cost-benefit studies of early childhood programs that use short term estimates of experimental test score gains coupled with auxiliary estimates of the impact of test scores on earnings (see, e.g., work by Kline and Walters). We show that this approach applied to the ABC data greatly understates the true benefit-cost ratio because (a) earnings are only forecast through a young age (27) and (b) benefits extend beyond earnings. The difference is sizable. Applying the Kline and Walters method to the ABC/CARE experiment, we would find a cost-benefit ratio of 1.4 compared to our estimate of 5.7.
-
 \begin{table}[!htbp]
 \centering
 \caption{Cost/benefit Analysis of ABC/CARE, Summary}\label{table:cba}
-\begin{adjustbox}{max width=\textwidth}
 \begin{threeparttable}
+\scriptsize
 \input{output/sensitivity.tex}
 \begin{tablenotes}
 \footnotesize
@@ -703,8 +698,13 @@ In Appendix~\ref{appendix:bcaestimates} we use our analysis to examine the empir
 {\normalsize }
 \end{tablenotes}
 \end{threeparttable}
-\end{adjustbox}
 \end{table}
+
+The estimates are robust when we conduct a drastic sensitivity analysis by removing components of the benefit/cost analysis entirely (Table~\ref{table:cba}).\footnote{In Appendix~\ref{appendix:sensitivity}, we present exercises that are not as drastic as removing the whole component, but instead removing fractions of it.} Even when completely removing the gain associated with crime for males, the program is socially efficient. Both the internal rate of return and the benefit/cost ratio are substantial. Parental income and crime are the components for which the internal rate of return and the benefit/cost ratio are the most sensitive. The reason for the sensitivity to parental income is that the amount is substantial and it is not heavily discounted because it accumulates during the first $21$ years of the children's life.\footnote{Depending on views about choice of individuals in labor markets, parental income should be excluded or included. If markets are neoclassical, the marginal value of foregone leisure is the wage and our our measure of parental income overstates the benefits of working. If nonemployment is involuntary, the full benefits should be counted.} Crime occurs later in life and its benefits are discounted accordingly. The amount due to crime savings is large so removing it diminishes both the internal rate of return and the benefit/cost ratio (but they remain statistically significant).
+
+\textit{Our sensitivity analyses indicate that no single category of outcomes drives the social efficiency of the program. It is the life-cycle benefits across multiple dimensions of human development.}
+
+In Appendix~\ref{appendix:bcaestimates} we use our analysis to examine the empirical foundations of recent cost-benefit studies of early childhood programs that use short term estimates of experimental test score gains coupled with auxiliary estimates of the impact of test scores on earnings (see, e.g., work by Kline and Walters). We show that this approach applied to the ABC data greatly understates the true benefit-cost ratio because (a) earnings are only forecast through a young age (27) and (b) benefits extend beyond earnings. The difference is sizable. Applying the Kline and Walters method to the ABC/CARE experiment, we would find a cost-benefit ratio of 1.4 compared to our estimate of 5.7.
 
 \subsection{Possible Explanations for Gender Differences}
 
