--- a/output/combined_predict_ti_ready.tex
+++ b/output/combined_predict_ti_ready.tex
@@ -1,7 +1,7 @@
 \begin{tabular}{lcccc} \toprule
  & (1) & (2) & (3) & (4)  \\
 Group Matched   & Control & Treatment & Control & Treatment \\ 
-Auxiliary Sample & \multicolumn{2}{c}{CNLSY} & \multicolumn{2}{c}{NLSY79}  \\  \midrule 
+Auxiliary Sample & \multicolumn{2}{c}{NLSY79} & \multicolumn{2}{c}{PSID}  \\  \midrule 
 Male & -167.28*** & -166.06*** & -515.30*** & -515.46*** \\
  & (36.72) & (35.08) & (155.70) & (155.49) \\
 Black & 116.95*** & 123.03*** & 136.30 & 135.77 \\
