--- a/abc_comprehensivecba_appendix-pub.tex
+++ b/abc_comprehensivecba_appendix-pub.tex
@@ -8,7 +8,7 @@
 \renewcommand\theassumption{AA--\arabic{assumption}}
 
 \begin{document}
-\title{\Large \textbf{Appendix: \\ The Life-cycle Benefits of an Influential Early Childhood Program}}
+\title{\Large \textbf{Appendix: \\ The Life-cycle Benefits \\ of an Influential Early Childhood Program}}
 \author{
 Jorge Luis Garc\'{i}a\\
 Department of Economics\\
