--- a/output/abccare_endog_si30y_inc_labor_smale_ready.tex
+++ b/output/abccare_endog_si30y_inc_labor_smale_ready.tex
@@ -9,7 +9,7 @@ Labor Income (21) &         &         &         &         &     0.107 &     0.41
 Cognitive &         &         &  -896.956 &     0.525 &         &         & -13,700 &     0.815 \\  
 Non Cognitive &         &         & 10,273.761 &     0.105 &         &         &  7,533.493 &     0.175 \\  
 Constant & -31,600.00 &     0.780 & -34,800.00 &     0.630 & -272,000.00 &     0.985 & -526,000.00 &     0.965 \\  \midrule
-$F$-stat &     2.327 &         &     1.963 &         &     4.833 &         &     7.182 &         \\  \midrule 
+$F$-stat &     2.327 &         &     1.963 &         &     4.833 &         &     7.182 &         \\
 $R^2$ &     0.068 &         &     0.128 &         &     0.343 &         &     0.465 &         \\  
 Observations &    66 &         &    48 &         &    65 &         &    63 &         \\  
 \bottomrule \end{tabular}
